--- a/SearchEngine/Pages/Index.cshtml
+++ b/SearchEngine/Pages/Index.cshtml
@@ -2,36 +2,40 @@
 @using EuropePMC
 @using System.Globalization
 @model IndexModel
+
 @{
     ViewData["Title"] = "Home";
 }
 
-<div class="container">
-
-    <form method="post" asp-page-handler="SearchPublication">
-        <div class="row">
-            <div class="col-11">
-                <input type="search" class="search form-control" placeholder="Search here..." name="search" />
-            </div>
-            <div class="col-1" style="text-align: center">
-                <button class="btn btn-outline-primary">Search</button>
-            </div>
+<form method="post" asp-page-handler="SearchPublication">
+    <div class="row">
+        <div class="col-11">
+            <input type="search" class="search form-control" placeholder="Search here..." name="search" />
         </div>
-    </form>
-
-</div>
-
-<form method="post" asp-page-handler="NextPage">
-    <button class="btn btn-outline-primary">Next</button>
+        <div class="col-1" style="text-align: right">
+            <button class="btn btn-outline-primary">Search</button>
+        </div>
+    </div>
 </form>
 
 <hr />
 
 @if (@Model.TotalCount > 0)
 {
-    <p class="text-center">found <b>@Model.TotalCount.ToString("#,#", CultureInfo.InvariantCulture)</b> publications </p>
+    <div style="display: flex; justify-content: space-between; align-items: baseline">
+        <div>
+            <p>found <b>@Model.TotalCount.ToString("#,#", CultureInfo.InvariantCulture)</b> publications </p>
+        </div>
+        <div>
+            @if (@Model.Collection.Count >= 25)
+            {
+                <form method="post" asp-page-handler="NextPage">
+                    <button class="btn btn-primary">Next Page</button>
+                </form>
+            }
+        </div>
+    </div>
 
-    @*<p>NextPageStr: </p>*@
 
     <table class="table table-sm table-bordered">
         <thead>
@@ -61,8 +65,8 @@
 }
 else
 {
-    <div class="text-center">
-        <h3>Nothing found</h3>
+    <div class="text-center p-2" style="border: solid black 1px; border-radius: 10px">
+        <h4>There are no publications matching your query.</h4>
     </div>
 }
 
