--- a/SearchEngine/Pages/Shared/_Layout.cshtml
+++ b/SearchEngine/Pages/Shared/_Layout.cshtml
@@ -13,10 +13,6 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Europe PMC - SearchEngine</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
             </div>
         </nav>
     </header>
@@ -28,7 +24,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - SearchEngine
+            &copy; 2022 - Europe PMC - SearchEngine
         </div>
     </footer>
 
